<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:padding="15dp"
        >

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginLeft="300sp"
            app:srcCompat="@drawable/splash" />



            <EditText
                android:id="@+id/fn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fname"
                android:ems="10"
                android:textSize="22sp"
                android:inputType="text"
                />


            <EditText
                android:id="@+id/un"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/uname"
                android:ems="10"
                android:textSize="22sp"
                android:inputType="text"
                />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:ems="10"
                android:textSize="22sp"
                android:inputType="text"
                />


            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:ems="10"
                android:textSize="22sp"
                android:inputType="textPassword"
                />


            <EditText
                android:id="@+id/con_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpass"
                android:ems="10"
                android:textSize="22sp"
                android:inputType="textPassword"
                />



        <Button
            android:id="@+id/b1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="24sp"
            android:textColor="#ffffff"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="30dp"
            android:onClick="signUp"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_signup"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:layout_marginLeft="15dp"
                />
            <Button
                android:id="@+id/b2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="22sp"
                android:textColor="#ffffff"
                android:background="@drawable/rounded_button"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="15dp"
                android:onClick="goToLogin"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140sp"
                android:text="@string/eng"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:clickable="true"/>
            <!--            android:onClick="clickedEng"-->



        </LinearLayout>



    </LinearLayout>
</ScrollView>