<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".Login"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"

            android:padding="30dp"
            app:srcCompat="@drawable/task33" />

        <EditText
                android:id="@+id/e1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:ems="10"
                android:textSize="22sp"
                android:inputType="text"
                />
            <EditText
                android:id="@+id/p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:ems="10"
                android:textSize="22sp"
                android:inputType="textPassword"
                />

        <Button
            android:id="@+id/b1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="24sp"
            android:textColor="#ffffff"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="40dp"
            android:onClick="login"
            />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New User ?"
                android:textSize="22sp"
                android:textColor="#000000"
                android:layout_marginLeft="15dp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_button"
                android:onClick="goToSignup"
                android:text="@string/signup"
                android:textColor="#ffffff"
                android:textSize="22sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140sp"
                android:clickable="true"
                android:text="@string/eng"
                android:textColor="	#000000"
                android:textSize="18sp"
                android:textStyle="bold"/>


        </LinearLayout>
    </LinearLayout>
</ScrollView>